Regression: Curves sculpt mode does not select default tool #107060

Closed
opened 2023-04-18 06:01:08 +02:00 by Sun Kim · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-16 22:24, hash: bd86e719ab91
Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: d48939f103c0

Caused by 786734e6c8

Short description of error
Switching to curves sculpt mode should select the density tool by default but it does not with this error: Tool 'builtin_brush.density' not found for space 'VIEW_3D'

Exact steps for others to reproduce the error

  • Add (hair) curves object
  • Switch to sculpt mode
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-16 22:24, hash: `bd86e719ab91` Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: `d48939f103c0` Caused by 786734e6c8 **Short description of error** Switching to curves sculpt mode should select the density tool by default but it does not with this error: `Tool 'builtin_brush.density' not found for space 'VIEW_3D'` **Exact steps for others to reproduce the error** - Add (hair) curves object - Switch to sculpt mode
Sun Kim added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-04-18 06:01:09 +02:00
Member

Thanks for the report. Can confirm

Thanks for the report. Can confirm
Member

Caused by 786734e6c8
@ideasman42 ^

Caused by 786734e6c8ddab6cbea7d42389f8f8190e59853c @ideasman42 ^
Pratik Borhade changed title from Curves sculpt mode does not select default tool to Regression: Curves sculpt mode does not select default tool 2023-04-18 07:49:33 +02:00
Member

That commit needs versioning code, but @ideasman42 is already aware, see last comments in #106057

That commit needs versioning code, but @ideasman42 is already aware, see last comments in #106057
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-18 12:30:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107060
No description provided.