Fix #107060: Curves sculpt mode does not select default tool

Regression in [0] when curve tool names changed to use brush names
with the utility function generate_from_enum_ex().

[0]: 786734e6c8ddab6cbea7d42389f8f8190e59853c